# sequence-miner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cc
data/: config.yaml  config_fifa.yaml  config_paper.yaml  config_simple.yaml  config_string.yaml  fifa2k.spmf  input.yaml  input_prefixspan_paper.txt  simple_input.txt  simple_string_input.txt  synthetic10k.spmf  synthetic20k.spmf
performance_analysis/: analyzer.py  charts.ipynb  prefixspan_vs_spade.py  prefixspan_vs_spade_bibile.csv  prefixspan_vs_spade_bms_webview2.csv  prefixspan_vs_spade_fifa.csv  sequence_miner_vs_spmf.py  sm_vs_spmf_bible.csv  sm_vs_spmf_bms_webview.csv  sm_vs_spmf_bms_webview2.csv  sm_vs_spmf_fifa.csv  sm_vs_spmf_gen.csv  spade_dfs_bfs.py  spade_dfs_bfs_bibile.csv  spade_dfs_bfs_bible.csv  spade_dfs_bfs_bible_0_1.csv  spade_dfs_bfs_bms_webview.csv  spade_dfs_bfs_fifa.csv  spade_dfs_bfs_synthetic.csv  time_analysis.ipynb
src/: Algorithm.cc  Algorithm.h  AlgorithmManager.cc  AlgorithmManager.h  CMakeLists.txt  EquivalenceClass.cc  EquivalenceClass.h  IdList.cc  IdList.h  InputData.cc  InputData.h  Parameters.cc  Parameters.h  Parser.cc  Parser.h  PrefixSpanAlgorithm.cc  PrefixSpanAlgorithm.h  SequenceData.cc  SequenceData.h  SpadeAlgorithm.cc  SpadeAlgorithm.h  SpadeAlgorithm.hpp  utils.hpp
tests/: CMakeLists.txt  test.cc
